prometheus/iptables
# Generated by iptables-save v1.4.21 on Tue Jan 17 12:13:35 2023
*filter
:INPUT DROP [104:6387]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [134:69925]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT
COMMIT
# Completed on Tue Jan 17 12:13:35 2023
